Config changes for CRAMPS and Xylotex to run on Stretch
Config changes to CRAMPS and Xylotex to run on Debian Stretch.

--- a/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ini
+++ b/configs/ARM/BeagleBone/CRAMPS/CRAMPS.ini
@@ -1,13 +1,16 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
 CONFIG=pru=0 num_stepgens=4 num_pwmgens=6
-PRUBIN=xenomai/pru_generic.bin
+#PRUBIN=xenomai/pru_generic.bin
+PRUBIN=rt-preempt/pru_generic.bin
 
-
+###############################################################################
+# Hardware Abstraction Layer section
+###############################################################################
 [EMC]
 
 # Name of machine, for use with display, etc.
-MACHINE =               MendelMax-CRAMPS
+MACHINE =               CRAMPS
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
 #DEBUG =                0x00000003
@@ -15,14 +18,14 @@ MACHINE =               MendelMax-CRAMPS
 DEBUG = 0
 
 
-
-
+###############################################################################
+# Sections for display options 
+###############################################################################
 [DISPLAY]
-
 # Name of display program, e.g., tkemc
+DISPLAY = axis
 #DISPLAY = tkemc
 #DISPLAY = gscreen
-DISPLAY = axis
 
 # Touchy currently won't work without some hardware buttons/jog-wheel
 #DISPLAY = touchy
@@ -64,6 +67,9 @@ jpg = image-to-gcode
 py = python
 
 
+###############################################################################
+# Task controller section 
+###############################################################################
 [TASK]
 
 # Name of task controller program, e.g., milltask
@@ -73,16 +79,16 @@ TASK =                  milltask
 CYCLE_TIME =            0.010
 
 
-
-
+###############################################################################
+# Part program interpreter section 
+###############################################################################
 [RS274NGC]
-
 # File containing interpreter variables
 PARAMETER_FILE =        pru-stepper.var
 
-
-
-
+###############################################################################
+# Motion control section 
+###############################################################################
 [EMCMOT]
 
 EMCMOT =                motmod
@@ -97,8 +103,9 @@ COMM_WAIT =             0.010
 SERVO_PERIOD =          1000000
 
 
-
-
+###############################################################################
+# Hardware Abstraction Layer section
+###############################################################################
 [HAL]
 
 # The run script first uses halcmd to execute any HALFILE
@@ -107,7 +114,7 @@ SERVO_PERIOD =          1000000
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
 
-HALFILE =		CRAMPS.hal
+HALFILE =               CRAMPS.hal
 
 # list of halcmd commands to execute
 # commands are executed in the order in which they appear
@@ -116,6 +123,9 @@ HALFILE =		CRAMPS.hal
 POSTGUI_HALFILE =       3D.postgui.hal
 
 
+###############################################################################
+# Trajectory planner section
+###############################################################################
 [TRAJ]
 
 AXES =                  4
@@ -132,6 +142,9 @@ MAX_LINEAR_VELOCITY = 200.00
 
 
 
+###############################################################################
+# Axes sections
+###############################################################################
 [AXIS_0]
 
 # 
@@ -186,6 +199,7 @@ STEPSPACE  =              1000
 
 
 
+################################################################
 [AXIS_1]
 
 TYPE =              LINEAR
@@ -226,6 +240,7 @@ STEPSPACE  =              1000
 
 
 
+################################################################
 [AXIS_2]
 
 TYPE =              LINEAR
@@ -267,6 +282,7 @@ STEPSPACE  =              1000
 
 
 
+################################################################
 [AXIS_3]
 
 TYPE = ANGULAR
