--- a/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
+++ b/configs/ARM/BeagleBone/Xylotex/Xylotex.ini
@@ -1,37 +1,41 @@
 [PRUCONF]
 DRIVER=hal_pru_generic
 CONFIG=pru=1 num_stepgens=4
-PRUBIN=xenomai/pru_generic.bin
+#PRUBIN=xenomai/pru_generic.bin
+#PRUBIN=lib/linuxcnc/rt-preempt/pru_generic.bin
+PRUBIN=rt-preempt/pru_generic.bin
 
+###############################################################################
+# General section 
+###############################################################################
 [EMC]
 
 # Name of machine, for use with display, etc.
 MACHINE =               Xylotex
 
 # Debug level, 0 means no messages. See src/emc/nml_int/emcglb.h for others
+DEBUG = 0
 #DEBUG =                0x00000003
 #DEBUG =                0x00000007
-DEBUG = 0
 
 
-
-
+###############################################################################
+# Sections for display options 
+###############################################################################
 [DISPLAY]
-#uncomment the line below if the shuttleexpress is installed
-#(JP)GLADEVCP = shuttlexpress.glade
-#leave the follwoing two alone
-
-#EMBED_TAB_NAME = GladeVCP demo
-#EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u shuttlexpress.py -x {XID} shuttlexpress.glade
-
 # Name of display program, e.g., tkemc
 DISPLAY = axis
 #DISPLAY = jtgremlin
-
-#EDITOR = mousepad
-
 # Touchy currently will not work without some hardware buttons/jog-wheel
 #DISPLAY = touchy
+
+#uncomment the line below if the shuttleexpress is installed
+#GLADEVCP = shuttlexpress.glade
+#leave the following two alone
+#EMBED_TAB_NAME = GladeVCP demo
+#EMBED_TAB_COMMAND = halcmd loadusr -Wn gladevcp gladevcp -c gladevcp -u shuttlexpress.py -x {XID} shuttlexpress.glade
+
+#EDITOR = mousepad
 
 # Cycle time, in seconds, that display will sleep between polls
 CYCLE_TIME =            0.200
@@ -40,19 +44,22 @@ CYCLE_TIME =            0.200
 HELP_FILE =             tklinucnc.txt
 
 # Initial display setting for position, RELATIVE or MACHINE
-POSITION_OFFSET =       RELATIVE
+POSITION_OFFSET =       MACHINE
 
 # Initial display setting for position, COMMANDED or ACTUAL
 POSITION_FEEDBACK =     ACTUAL
 
 # Highest value that will be allowed for feed override, 1.0 = 100%
 MAX_FEED_OVERRIDE =     1.0
+MAX_SPINDLE_OVERRIDE =  1.0
+MIN_SPINDLE_OVERRIDE =  0.25
 
 # Prefix to be used
+#PROGRAM_PREFIX = /home/machinekit/machinekit/nc_files
 PROGRAM_PREFIX = ~/machinekit/nc_files/
 
 # Introductory graphic
-INTRO_GRAPHIC =         machinekit.gif
+INTRO_GRAPHIC =         linuxcnc.gif
 INTRO_TIME =            5
 
 # Increments for the JOG section
@@ -70,6 +77,9 @@ jpg = image-to-gcode
 py = python
 
 
+###############################################################################
+# Task controller section 
+###############################################################################
 [TASK]
 
 # Name of task controller program, e.g., milltask
@@ -79,195 +89,215 @@ TASK =                  milltask
 CYCLE_TIME =            0.010
 
 
-
-
+###############################################################################
+# Part program interpreter section 
+###############################################################################
 [RS274NGC]
-
 # File containing interpreter variables
 PARAMETER_FILE =        pru-stepper.var
 RS274NGC_STARTUP_CODE = G00 G17 G21 G40 G49 G64 P0.1 Q0.1 G80 G90
 
+###############################################################################
+# Motion control section 
+###############################################################################
 [EMCMOT]
-
 EMCMOT =                motmod
-
 # Timeout for comm to emcmot, in seconds
 COMM_TIMEOUT =          1.0
-
 # Interval between tries to emcmot, in seconds
 COMM_WAIT =             0.010
-
 # Servo task period, in nanoseconds
 SERVO_PERIOD =          1000000
 
-
+###############################################################################
+# Hardware Abstraction Layer section
+###############################################################################
 [HAL]
-
+HALUI = halui
 # The run script first uses halcmd to execute any HALFILE
 # files, and then to execute any individual HALCMD commands.
-
+HALFILE =                Xylotex.hal
+#HALFILE =               custom.hal
+# uncomment the line below if the shuttlexpress jig wheel is used
+#HALFILE =		../../../shuttlexpress.hal
+#POSTGUI_HALFILE =       Xylotex.postgui.hal
 # list of hal config files to run through halcmd
 # files are executed in the order in which they appear
-
-HALFILE =                Xylotex.hal
-#(JP) uncomment the line below if the shuttlexpress jig wheel is used
-#HALFILE =		../../../shuttlexpress.hal
-
-# list of halcmd commands to execute
-# commands are executed in the order in which they appear
 #HALCMD =               save neta
-HALUI = halui
-POSTGUI_HALFILE =       Xylotex.postgui.hal
+
+###############################################################################
+# Hardware Abstraction Layer User Interface section
+###############################################################################
+[HALUI]
+MDI_COMMAND = G0 X0 Y0 Z0
+MDI_COMMAND = G38.2 Z-2 f16
+MDI_COMMAND = G92 Z0.25
+MDI_COMMAND = G0 Z0.75
+MDI_COMMAND = G92 x2 y-.5
 
 
+###############################################################################
+# Trajectory planner section
+###############################################################################
 [TRAJ]
-
 AXES =                     4
 COORDINATES =              X Y Z A
+HOME =                     1 1 0 2
 MAX_ANGULAR_VELOCITY =     45.00
 DEFAULT_ANGULAR_VELOCITY = 4.50
 LINEAR_UNITS =             inch
 ANGULAR_UNITS =            degree
 CYCLE_TIME =               0.010
 DEFAULT_VELOCITY =         2.0
-MAX_LINEAR_VELOCITY =      2.0
+DEFAULT_ACCELERATION =    15.0
+MAX_LINEAR_VELOCITY =      2.6
 NO_FORCE_HOMING =          1
+# POSITION_FILE = position.txt
+#PROBE_INDEX =           0
+#PROBE_POLARITY =        1
 
-################################################################
+###############################################################################
+# section for main IO controller parameters 
+###############################################################################
+[EMCIO]
+
+#- Name of IO controller program, e.g., io
+EMCIO = 		io
+
+#- cycle time, in seconds
+CYCLE_TIME =            0.100
+
+#- tool table file
+TOOL_TABLE =            mill.tbl
+
+#- Tool Change Position specifies the location to move to for a tool change
+#TOOL_CHANGE_POSITION = 0 0 2
+
+###############################################################################
+# Axes sections
+###############################################################################
 [AXIS_0]
 
 #
-# Step timing is 40 us steplen + 40 us stepspace
-# That gives 80 us step period = 12.5 KHz step freq
+# Step timing is 25 us steplen + 25 us stepspace
+# That gives 50 us step period = 20 KHz step freq
 #
-# Bah, even software stepping can handle that, hm2 doesnt buy you much with
-# such slow steppers.
+# Scale is 200 steps/rev * 5 revs/inch * 2 microsteps = 2000 steps/inch
 #
-# Scale is 200 steps/rev * 5 revs/inch = 1000 steps/inch
-#
-# This gives a maxvel of 12.5/1 = 12.5 ips
+# This gives a maxvel of 20000/2000 = 10 ips
 #
 TYPE =              LINEAR
-MAX_VELOCITY =       1.0
+MAX_VELOCITY =       2.0
 MAX_ACCELERATION =   15.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    1.2
+STEPGEN_MAX_VEL =    2.6
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
-SCALE =  32000
+SCALE =              2000
 
-MIN_LIMIT =             -0.0
-MAX_LIMIT =             20.0
+MIN_LIMIT =          -0.0
+MAX_LIMIT =          13.0
 
-FERROR =     .1
-MIN_FERROR = 0.05
+FERROR =               .1
+MIN_FERROR =          0.05
 
-HOME =                  0.000
-HOME_OFFSET =           0.00
-HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
-#HOME_USE_INDEX =        YES
-#HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
-#HOME_SEQUENCE = 2
+HOME                =   0.000
+HOME_OFFSET         =  -0.1
+HOME_SEARCH_VEL     =  -1.5
+HOME_LATCH_VEL      =   0.25
+HOME_USE_INDEX      =    NO
+HOME_IGNORE_LIMITS  =    YES
+HOME_IS_SHARED      =    1
+HOME_SEQUENCE       =    1
 
 # these are in nanoseconds
-DIRSETUP   =              1000
-DIRHOLD    =              20000
-STEPLEN    =              500
-STEPSPACE  =              4000
+DIRSETUP    =            25000
+DIRHOLD     =            25000
+STEPLEN     =            25000
+STEPSPACE   =            25000
 
 # Set to one for active low step pulses
-STEP_INVERT =           0
+STEP_INVERT =            0
 
 # PID tuning params
-DEADBAND =              0
-P =                     50
-I =                     0
-D =                     0
-FF0 =                   0
-FF1 =                   1
-FF2 =			0
-BIAS =                  0
-MAX_OUTPUT =		0
-
+DEADBAND    =            0
+P           =            50
+I           =            0
+D           =            0
+FF0         =            0
+FF1         =            1
+FF2         =            0
+BIAS        =            0
+MAX_OUTPUT  =            0
 
 ################################################################
 [AXIS_1]
 
 #
-# Step timing is 40 us steplen + 40 us stepspace
-# That gives 80 us step period = 12.5 KHz step freq
+# Step timing is 25 us steplen + 25 us stepspace
+# That gives 50 us step period = 12.5 KHz step freq
 #
-# Bah, even software stepping can handle that, hm2 doesnt buy you much with
-# such slow steppers.
+# Scale is 200 steps/rev * 5 revs/inch * 2 microsteps = 2000 steps/inch
 #
-# Scale is 200 steps/rev * 5 revs/inch = 1000 steps/inch
-#
-# This gives a maxvel of 12.5/1 = 12.5 ips
+# This gives a maxvel of 20000/2000 = 10 ips
 #
 TYPE =              LINEAR
-MAX_VELOCITY =       1.0
+MAX_VELOCITY =       2.0
 MAX_ACCELERATION =   15.0
 # Set Stepgen max 20% higher than the axis
-STEPGEN_MAX_VEL =    1.2
+STEPGEN_MAX_VEL =    2.6
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
-SCALE =  32000
+# scale is 200 steps/rev * 2 microstep * 5 tpi = 2000 steps/inch
+SCALE =              2000
 
-MIN_LIMIT =             -0.0
-MAX_LIMIT =             20.0
+MIN_LIMIT =          -0.0
+MAX_LIMIT =          12.0
 
-FERROR =     .1
-MIN_FERROR = 0.05
+FERROR =               .1
+MIN_FERROR =          0.05
 
-HOME =                  0.000
-HOME_OFFSET =           0.00
-HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
-#HOME_USE_INDEX =        YES
-#HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
-#HOME_SEQUENCE = 2
+HOME                =  0.000
+HOME_OFFSET         = -0.1
+HOME_SEARCH_VEL     = -1.5
+HOME_LATCH_VEL      =  0.250
+HOME_USE_INDEX     =   NO
+HOME_IGNORE_LIMITS  =  YES
+HOME_IS_SHARED      =  1
+HOME_SEQUENCE       =  1
 
 # these are in nanoseconds
-DIRSETUP   =              1000
-DIRHOLD    =              20000
-STEPLEN    =              500
-STEPSPACE  =              4000
+DIRSETUP    =            25000
+DIRHOLD     =            25000
+STEPLEN     =            25000
+STEPSPACE   =            25000
 
 # Set to one for active low step pulses
-STEP_INVERT =           0
+STEP_INVERT =            0
 
 # PID tuning params
-DEADBAND =              0
-P =                     50
-I =                     0
-D =                     0
-FF0 =                   0
-FF1 =                   1
-FF2 =			0
-BIAS =                  0
-MAX_OUTPUT =		0
+DEADBAND    =            0
+P           =            50
+I           =            0
+D           =            0
+FF0         =            0
+FF1         =            1
+FF2         =            0
+BIAS        =            0
+MAX_OUTPUT  =            0
 
 
 ################################################################
 [AXIS_2]
 
 #
-# Step timing is 40 us steplen + 40 us stepspace
-# That gives 80 us step period = 12.5 KHz step freq
+# Step timing is 25 us steplen + 25 us stepspace
+# That gives 50 us step period = 20 KHz step freq
 #
-# Bah, even software stepping can handle that, hm2 doesnt buy you much with
-# such slow steppers.
-#
-# Scale is 200 steps/rev * 5 revs/inch = 1000 steps/inch
-#
-# This gives a maxvel of 12.5/1 = 12.5 ips
+# SCALE is 200 steps/rev * 2 microstep * 4:1 gearing * 5 tpi = 8000 steps/inch
+# This gives a maxvel of 20000/8000 = 2.5 ips
 #
 TYPE =              LINEAR
 MAX_VELOCITY =       1.0
@@ -277,55 +307,50 @@ STEPGEN_MAX_VEL =    1.2
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
-SCALE =  32000
+# SCALE is 200 steps/rev * 2 microstep * 4:1 gearing * 5 turns/inch = 8000 steps/inch
+SCALE =              8000
 
-MIN_LIMIT =             -20.0
-MAX_LIMIT =             20.0
+MIN_LIMIT =           0.0
+MAX_LIMIT =           5.0
 
 FERROR =     .1
 MIN_FERROR = 0.05
 
-HOME =                  0.000
-HOME_OFFSET =           0.00
-HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
-#HOME_USE_INDEX =        YES
-#HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
-#HOME_SEQUENCE = 2
+HOME                =   0.000
+HOME_OFFSET         =   0.00
+HOME_SEARCH_VEL     =   1.0
+HOME_LATCH_VEL      =  -0.250
+HOME_USE_INDEX      =   NO
+HOME_IGNORE_LIMITS  =   YES
+HOME_IS_SHARED      =   1
+HOME_SEQUENCE       =   0
 
 # these are in nanoseconds
-DIRSETUP   =              1000
-DIRHOLD    =              20000
-STEPLEN    =              500
-STEPSPACE  =              4000
+DIRSETUP    =            25000
+DIRHOLD     =            25000
+STEPLEN     =            25000
+STEPSPACE   =            25000
 
 # Set to one for active low step pulses
-STEP_INVERT =           0
+STEP_INVERT =            0
 
 # PID tuning params
-DEADBAND =              0
-P =                     50
-I =                     0
-D =                     0
-FF0 =                   0
-FF1 =                   1
-FF2 =			0
-BIAS =                  0
-MAX_OUTPUT =		0
+DEADBAND    =            0
+P           =            50
+I           =            0
+D           =            0
+FF0         =            0
+FF1         =            1
+FF2         =            0
+BIAS        =            0
+MAX_OUTPUT  =            0
 
 ################################################################
 [AXIS_3]
 
 #
-# Step timing is 40 us steplen + 40 us stepspace
-# That gives 80 us step period = 12.5 KHz step freq
-#
-# Bah, even software stepping can handle that, hm2 doesnt buy you much with
-# such slow steppers.
-#
-# Scale is 200 steps/rev * 5 revs/inch = 1000 steps/inch
+# Step timing is 25 us steplen + 25 us stepspace
+# That gives 50 us step period = 20 KHz step freq
 #
 # This gives a maxvel of 12.5/1 = 12.5 ips
 #
@@ -337,8 +362,8 @@ STEPGEN_MAX_VEL =    1.2
 STEPGEN_MAX_ACC =    18.75
 
 BACKLASH =           0.000
-# scale is 200 steps/rev * 8 mirostep * 10 tpi
-SCALE =  32000
+# SCALE is 200 steps/rev * 2 microstep * 5 revs/inch = 2000 steps/inch
+SCALE =  2000
 
 MIN_LIMIT =             -0.0
 MAX_LIMIT =             15.0
@@ -349,44 +374,29 @@ MIN_FERROR = 0.05
 HOME =                  0.000
 HOME_OFFSET =           0.00
 HOME_SEARCH_VEL =       -.1
-HOME_LATCH_VEL =       0.2
+HOME_LATCH_VEL =        0.2
 #HOME_USE_INDEX =        YES
 #HOME_IGNORE_LIMITS =    YES
-#HOME_IS_SHARED = 1
-#HOME_SEQUENCE = 2
+#HOME_IS_SHARED =        1
+#HOME_SEQUENCE =         2
 
 # these are in nanoseconds
-DIRSETUP   =              1000
-DIRHOLD    =              20000
-STEPLEN    =              500
-STEPSPACE  =              4000
+DIRSETUP    =            25000
+DIRHOLD     =            25000
+STEPLEN     =            25000
+STEPSPACE   =            25000
 
 # Set to one for active low step pulses
-STEP_INVERT =           0
+STEP_INVERT =            0
 
 # PID tuning params
-DEADBAND =              0
-P =                     50
-I =                     0
-D =                     0
-FF0 =                   0
-FF1 =                   1
-FF2 =			0
-BIAS =                  0
-MAX_OUTPUT =		0
+DEADBAND    =            0
+P           =            50
+I           =            0
+D           =            0
+FF0         =            0
+FF1         =            1
+FF2         =            0
+BIAS        =            0
+MAX_OUTPUT  =            0
 
-
-
-
-############################
-
-[EMCIO]
-
-# Name of IO controller program, e.g., io
-EMCIO =                 io
-
-# cycle time, in seconds
-CYCLE_TIME =            0.100
-
-# tool table file
-TOOL_TABLE =            tool.tbl
